--- a/Beginners-Guide-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
+++ b/Beginners-Guide-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
@@ -23,7 +23,7 @@
     "- Selecting data\n",
     "- More about $\\chi^2$ value\n",
     "- p-value, Degree of freedom\n",
-    "- Importing data\n",
+    "- Importing data, vertical and horizontal data, iloc, Pandas.DataFrame.transpose()\n",
     "- Critical values\n",
     "- The null and alternative hypotheses"
    ]
@@ -755,27 +755,27 @@
     "\n",
     "For $\\chi^2$ for independence:\n",
     "\\begin{equation}\n",
-    "\\text{ (the number of rows - 1) } \\times \\text{ (the number of columns - 1) }\n",
+    "\\text{dof} = \\text{(the number of rows - 1)} \\times \\text{ (the number of columns - 1) }\n",
     "\\end{equation}\n",
     "\n",
     "For example if your data has 4 rows x 3 columns, then the degree of freedom is:\n",
     "\\begin{equation}\n",
-    "(4-1) \\times (3-1)=6\n",
+    "\\text{dof } = (4-1) \\times (3-1)=6\n",
     "\\end{equation}\n",
     "\n",
-    "For $\\chi^2$ Goodness of fit, the degrees of freedom is:\n",
+    "For $\\chi^2$ Goodness of fit, the categorical data has one dimention. And the degrees of freedom is:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\text{ (n - 1) } \\text{ where n is the number of categories that the variable is divided into.}\n",
+    "\\text{dof } = (n - 1) \\text{ where n is the number of categories that the variable is divided into.}\n",
     "\\end{equation}\n",
     "\n",
-    "For example \n",
-    "\n"
+    "\n",
+    "For our t-shirts, we use `[2]` which is the third index to find the degree of freedom."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "3"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,6 +798,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Importing data\n",
+    "\n",
     "## Horizontal data"
    ]
   },
@@ -805,13 +807,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generally, you want to import data from a file. This CSV file has data horizontally. By using `pd.read_csv` the data automatically changed to a Pandas dataframe. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Generally, you want to import data from a file. The first CSV file has data horizontally. By using `pd.read_csv` the data automatically changed to a Pandas dataframe. \n",
+    "\n",
     "The CSV file has the following data."
    ]
   },
@@ -825,8 +822,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's store the data to a variable called `tshirtshor`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +888,7 @@
        "1  Female     35     46   42    27"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +970,7 @@
        "Female     35     46   42    27"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +999,7 @@
        "        [41.5, 29. , 37.5, 42. ]]))"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This time we use data laid out vertically."
+    "We are going to use vertically laid out data. Let's store the data to a variable called `tshirtsver`."
    ]
   },
   {
@@ -1207,23 +1211,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Male</th>\n",
+       "      <th>Female</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>48</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Male  Female\n",
+       "0    48      35\n",
+       "1    12      46\n",
+       "2    33      42\n",
+       "3    57      27"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "arr2 = tshirtsver.iloc[:,1:]"
+    "arr2 = tshirtsver.iloc[:,1:]\n",
+    "arr2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wait, wait! What is `iloc`? `iloc` is used to select data using index"
+    "## iloc\n",
+    "\n",
+    "Wait, wait! What is `iloc`? `iloc` is used to select data using index number. The structure of `iloc` is `iloc[row index,colum index]`. Our `iloc[:,1:]` means select all rows and all columns after the first column.\n",
+    "\n",
+    "Now we can use our friend `chi2_contingency()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1307,7 @@
        "        [42. , 42. ]]))"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1320,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you prefer horizontal data to vertical data, you can transform data from vertical to horizontal by using T."
+    "## Pandas.DataFrame.transpose()\n",
+    "\n",
+    "If you prefer horizontal data to vertical data, you can transpose data from vertical to horizontal by using `Pandas.DataFrame.transpose()` or `T` for short."
    ]
   },
   {
@@ -1329,12 +1403,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We remove the first row using `iloc`."
+    "We remove the first row using `iloc[1:,0:]`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1463,7 @@
        "Female  35  46  42  27"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,30 +1474,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[48, 12, 33, 57],\n",
-       "       [35, 46, 42, 27]], dtype=object)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "arr3=num2.to_numpy()\n",
-    "arr3"
+    "Now let's use `chi2_contingency()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1433,13 +1492,13 @@
        "        [41.5, 29. , 37.5, 42. ]]))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chi2_contingency(arr3)"
+    "chi2_contingency(num2)"
    ]
   },
   {
