--- a/Gentle-Introduction-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
+++ b/Gentle-Introduction-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Beginners Guide to Chi square test for independence with Jupyter Notebook"
+    "# Gentle Introduction to Chi square test for independence with Jupyter Notebook"
    ]
   },
   {
@@ -37,9 +37,7 @@
     "\n",
     "The Chi-square test for independence is also called Pearson’s chi-square test. Chi-square test for independece is used in science, economics, marketing, or other various feilds. There are three ways to use the Chi-square. The Chi-square test for independence shows how two sets of data are independent from each other.  Chi-square of Goodness of fit test shows how different your data to the expected value. The [test for homogeneity](https://courses.lumenlearning.com/wmopen-concepts-statistics/chapter/test-of-homogeneity/)  determines if two or more populations have the same distribution of a single categorical variable. \n",
     "\n",
-    "In this article we are going to explore Chi-square test for independence with Jupyter Notebook. Oh by the way we pronounce \"Chi\" as \"kai\" like \"kite\", NOT \"chi\" in \"Chili\". $\\chi$ is a Greek letter for \"Chi\", so $\\chi^2$ reads Chi-square.\n",
-    "\n",
-    "I will try to explain as much as possible to understand what's going on in all the codes."
+    "In this article we are going to explore Chi-square test for independence with Jupyter Notebook. Oh by the way we pronounce \"Chi\" as \"kai\" like \"kite\", NOT \"chi\" in \"Chili\". $\\chi$ is a Greek letter for \"Chi\", so $\\chi^2$ reads Chi-square."
    ]
   },
   {
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +320,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Balck</th>\n",
+       "      <th>Black</th>\n",
        "      <th>White</th>\n",
        "      <th>Red</th>\n",
        "      <th>Blue</th>\n",
@@ -348,12 +346,12 @@
        "</div>"
       ],
       "text/plain": [
-       "            Balck  White        Red       Blue\n",
+       "            Black  White        Red       Blue\n",
        "Male    42.931034   30.0  38.793103  38.275862\n",
        "Female  40.068966   28.0  36.206897  35.724138"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,8 +362,34 @@
     "pd.DataFrame(\n",
     "    data=df[:,:], \n",
     "    index=[\"Male\",\"Female\"],\n",
-    "    columns=[\"Balck\",\"White\",\"Red\",\"Blue\"]\n",
+    "    columns=[\"Black\",\"White\",\"Red\",\"Blue\"]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above table is called a contingency table. You calculate the expected values from the obsered data using the following equation.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\text{expected value} = \\frac{\\text{row total} \\times \\text{column total}}{\\text{grand total}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "For the first cell,\n",
+    "\n",
+    "\n",
+    "|      | Blacl | White | Red | Blue| Total|\n",
+    "|------|-------|-------|-----|-----|------|\n",
+    "|Male  | $$ \\frac{150 \\times 83}{290}$$| | | |150 |\n",
+    "|Female|       |       |     |      |140 |\n",
+    "|Total | 83    |  58   | 75  |  74  |290 |\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -384,27 +408,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\begin{equation}\n",
-    "\\chi^2=\\Sigma\\frac{(O-E)^2}{E} \\\\\n",
-    "\\text{where O is the actual value and E is the expected value.}\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Side note about Latex\n",
-    "\n",
-    "I used Latex, pronounce 'lah-teck' to write the above equation in Jupyter Notebook. The cell you are writing must be Markdown and this is what you need to type in the cell.\n",
-    "\n",
-    "<center><img src=\"image/markdown.png\"></center>"
-   ]
-  },
-  {
-   "cell_type": "raw",
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
@@ -461,6 +464,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Side note about Latex\n",
+    "\n",
+    "I used Latex, pronounce 'lah-teck' to write the above equation in Jupyter Notebook. The cell you are writing must be Markdown and this is what you need to type in the cell.\n",
+    "\n",
+    "<center><img src=\"image/markdown.png\"></center>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\chi^2=\\Sigma\\frac{(O-E)^2}{E} \\\\\n",
+    "\\text{where O is the actual value and E is the expected value.}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## p-value"
    ]
   },
@@ -468,7 +492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can read more details about p-value [here](https://towardsdatascience.com/p-values-explained-by-data-scientist-f40a746cfc8). You can find the p-value in the second returned value. p-value measures the probability of seeing the effect when the null hypothesis is true. So, when the p-value is low enough, we reject the null hypothesis and conclude the observed effect holds.\n",
+    "You can find the p-value at the second in the returned value. p-value measures the probability of seeing the effect when the null hypothesis is true. So, when the p-value is low enough, we reject the null hypothesis and conclude the observed effect holds. We will talk about the null hypothesis later in this article.\n",
     "\n",
     "https://www.machinelearningplus.com/statistics/p-value/\n",
     "\n",
@@ -479,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +512,7 @@
        "0.00901202511379703"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,5 +1257,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
