--- a/Data_sources.ipynb
+++ b/Data_sources.ipynb
@@ -19,6 +19,8 @@
     "- [Reddit](https://www.reddit.com/r/datasets/)\n",
     "- [UCI](https://archive.ics.uci.edu/ml/index.php)\n",
     "- [Academictorrents](http://academictorrents.com/browse.php?cat=6)\n",
+    "- [Visualdata](https://www.visualdata.io/)\n",
+    "- [Factivated](https://www.factivated.com/)\n",
     "\n",
     "## Governments\n",
     "\n",
