--- a/Data_sources.ipynb
+++ b/Data_sources.ipynb
@@ -14,7 +14,7 @@
     "- [Kaggle](https://data.world/)\n",
     "- [Fivethirtyeight, sports, politics, etc](https://github.com/fivethirtyeight/data)\n",
     "- [BuzzfeedNews](https://github.com/BuzzFeedNews/everything)\n",
-    "-[Opendata](https://opendata.socrata.com/)\n",
+    "- [Opendata](https://opendata.socrata.com/)\n",
     "- [Quandl, financial, economic, etc.](https://www.quandl.com/)\n",
     "- [Reddit](https://www.reddit.com/r/datasets/)\n",
     "- [UCI](https://archive.ics.uci.edu/ml/index.php)\n",
@@ -38,6 +38,31 @@
     "- [The Statistics in Sports Section](https://community.amstat.org/sis/sportsdataresources)\n",
     "- [Sport reference](https://www.sports-reference.com/)\n",
     "\n",
+    "\n",
+    "## Health\n",
+    "\n",
+    "- [Public health](https://researchguides.uic.edu/publichealth)\n",
+    "- [OECD Health](https://data.oecd.org/health.htm)\n",
+    "\n",
+    "## Environment\n",
+    "\n",
+    "- [WTO](https://shsulibraryguides.org/c.php?g=86718&p=1692269)\n",
+    "- [Global Environmental Database](http://db.cger.nies.go.jp/portal/geds/index)\n",
+    "- [OECD Environment](https://data.oecd.org/environment.htm)\n",
+    "\n",
+    "## Food & Agriculture\n",
+    "\n",
+    "- [OECD Agriculture](https://data.oecd.org/agriculture.htm)\n",
+    "- [Food and agriculture organization of the United Nations](http://www.fao.org/statistics/en/)\n",
+    "- [US Data.gov](https://catalog.data.gov/dataset?groups=agriculture8571#topic=food_navigation)\n",
+    "- [US Department of agriculture](https://fdc.nal.usda.gov/download-datasets.html)\n",
+    "\n",
+    "\n",
+    "## Economics\n",
+    "\n",
+    "- [IMF](https://www.imf.org/external/pubs/ft/weo/2019/01/weodata/index.aspx)\n",
+    "- [BEA](https://www.bea.gov/data/gdp)\n",
+    "- [Datahub](https://datahub.io/collections/economic-data)\n",
     "\n",
     "\n"
    ]
