--- a/Data_sources.ipynb
+++ b/Data_sources.ipynb
@@ -60,8 +60,8 @@
     "\n",
     "## Economics\n",
     "\n",
-    "- [IMF](https://www.imf.org/external/pubs/ft/weo/2019/01/weodata/index.aspx)\n",
-    "- [BEA](https://www.bea.gov/data/gdp)\n",
+    "- [International Monetary Fund](https://www.imf.org/external/pubs/ft/weo/2019/01/weodata/index.aspx)\n",
+    "- [US Bureau of Economic Analysis](https://www.bea.gov/data/gdp)\n",
     "- [Datahub](https://datahub.io/collections/economic-data)\n",
     "\n",
     "\n"
