--- a/Data_sources.ipynb
+++ b/Data_sources.ipynb
@@ -63,7 +63,9 @@
     "- [International Monetary Fund](https://www.imf.org/external/pubs/ft/weo/2019/01/weodata/index.aspx)\n",
     "- [US Bureau of Economic Analysis](https://www.bea.gov/data/gdp)\n",
     "- [Datahub](https://datahub.io/collections/economic-data)\n",
-    "\n",
+    "- [OECD Economy](https://data.oecd.org/economy.htm)\n",
+    "- [OECD Main Economic Indicators](https://www.oecd-ilibrary.org/economics/data/main-economic-indicators_mei-data-en)\n",
+    "- [World Bank](https://data.worldbank.org/)\n",
     "\n"
    ]
   }
