--- a/Beginners_guide_towards_Data_Science.ipynb
+++ b/Beginners_guide_towards_Data_Science.ipynb
@@ -8,6 +8,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "\n",
+    "- Introduction\n",
+    "- Setting up your tools\n",
+    "- Finding data\n",
+    "- Importing data\n",
+    "- Preparing/Cleaning data\n",
+    "- Overviewing data\n",
+    "- Graphing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "If this is the first time you are trying to analyze data, you need to go through cetain steps. Finding data, importing data, preparing data, checking data quality, etc. In this article, I go through the preliminary process before analyzing your data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting up your tools\n",
+    "\n",
+    "There are many introductory articles about Jupyter, Pandas, Numpy and Python. This [article](https://towardsdatascience.com/beginners-guide-to-jupyter-notebook-8bb85b85085?source=friends_link&sk=83bbd7201d6010e95f10b7c8e04d6545) is a good place to start. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding data\n",
+    "\n",
+    "There are many resources you can find online. This is [my collection of data sources](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/Data_sources.ipynb). CSV file is a comma-separated values file and is the easiest file to work on. Most of data sources provided a CSV file. Find a couple of data you are interested in from the list. Download it to your hard drive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,32 +64,25 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## Table of Contents\n",
-    "\n",
-    "- Introduction\n",
-    "- Finding data\n",
-    "- Importing data\n",
-    "- Preparing/Cleaning data\n",
-    "- Overviewing data\n",
-    "- Graphing data\n",
-    "\n",
-    "## Introduction\n",
-    "\n",
-    "If this is the first time you are trying to analyze data, you need to go through cetain steps. Finding data, importing data, preparing data, checking data quality, etc. In this article, I go through the process to check your data.\n",
-    "\n",
-    "## Finding data\n",
-    "\n",
-    "There are many resources you can find online. This is [my collection of data sources](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/Data_sources.ipynb). CSV file is a comma-separated values file and is the easiest file to work on. Most of data sources provided a CSV file. Find a couple of data you are interested in from the list. Download it to your hard drive.\n",
-    "\n",
-    "## Importing data\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -50,11 +92,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/shinokada/t81_558_deep_learning/blob/master/t81_558_class_02_1_python_pandas.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/shinokada/t81_558_deep_learning/blob/master/t81_558_class_02_2_pandas_cat.ipynb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,55 +134,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "/Users/shinokada/DataScience/seaborn-visualizing-statistical-data/02/demos/m1-demo2-VisualizingDistributionsToFindPatterns.ipynb"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
    "outputs": [],
    "source": []
   },
