--- a/Gentle-Introduction-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
+++ b/Gentle-Introduction-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
@@ -244,7 +244,7 @@
    "source": [
     "# chi2_contingency \n",
     "\n",
-    "SciPy's `chi2_contingency()` returns $\\chi^2$ value, p-value, degree of freedom and expected values."
+    "SciPy's `chi2_contingency()` returns four values, $\\chi^2$ value, p-value, degree of freedom and expected values."
    ]
   },
   {
@@ -283,22 +283,14 @@
    "metadata": {},
    "source": [
     "You can find the expected values at the forth in the returned value. It is in an array form. \n",
-    "Let's print the expected values in a friendly way. We again use the Pandas dataframe."
+    "Let's print the expected values in a friendly way. We again use the Pandas dataframe. We are going to add index and column values and round the values to the two decimal places `round(2)`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[42.93103448 30.         38.79310345 38.27586207]\n",
-      " [40.06896552 28.         36.20689655 35.72413793]]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -329,41 +321,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
-       "      <td>42.931034</td>\n",
+       "      <td>42.93</td>\n",
        "      <td>30.0</td>\n",
-       "      <td>38.793103</td>\n",
-       "      <td>38.275862</td>\n",
+       "      <td>38.79</td>\n",
+       "      <td>38.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
-       "      <td>40.068966</td>\n",
+       "      <td>40.07</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>36.206897</td>\n",
-       "      <td>35.724138</td>\n",
+       "      <td>36.21</td>\n",
+       "      <td>35.72</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Black  White        Red       Blue\n",
-       "Male    42.931034   30.0  38.793103  38.275862\n",
-       "Female  40.068966   28.0  36.206897  35.724138"
+       "        Black  White    Red   Blue\n",
+       "Male    42.93   30.0  38.79  38.28\n",
+       "Female  40.07   28.0  36.21  35.72"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df=chi2_contingency(tshirts)[3]\n",
-    "print(df)\n",
+    "\n",
     "pd.DataFrame(\n",
     "    data=df[:,:], \n",
     "    index=[\"Male\",\"Female\"],\n",
     "    columns=[\"Black\",\"White\",\"Red\",\"Blue\"]\n",
-    ")"
+    ").round(2)\n"
    ]
   },
   {
@@ -379,9 +371,9 @@
     "For the first cell,\n",
     "\n",
     "\n",
-    "|      | Blacl | White | Red | Blue| Total|\n",
+    "|      | Black  | White | Red | Blue| Total|\n",
     "|------|-------|-------|-----|-----|------|\n",
-    "|Male  | $$ \\frac{150 \\times 83}{290}$$| | | |150 |\n",
+    "|Male  | $$ \\frac{150 \\times 83}{290}=42.93$$| | | |150 |\n",
     "|Female|       |       |     |      |140 |\n",
     "|Total | 83    |  58   | 75  |  74  |290 |\n",
     "\n",
@@ -503,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +504,7 @@
        "0.00901202511379703"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1210,13 +1202,6 @@
    "source": [
     "- https://www.machinelearningplus.com/statistics/p-value/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
