Same as Medium article

--- a/Beginners-Guide-to-Jupyter-Notebook.ipynb
+++ b/Beginners-Guide-to-Jupyter-Notebook.ipynb
@@ -26,7 +26,9 @@
     "- Python libraries\n",
     "- Data attributes\n",
     "- Descriptive Statistics\n",
-    "- Basic plotting"
+    "- Basic plotting\n",
+    "- Matplotlib\n",
+    "- Seaborn"
    ]
   },
   {
@@ -107,7 +109,7 @@
     "\n",
     "Python offers a variety of packages for plotting data. Seaborn and Matplotlib are two of Python's most powerful visualization libraries. \n",
     "\n",
-    "Use `import ... as ...` to import a library. We use `%matplotlib inline` to show graphs inline."
+    "Use `import ... as ...` to import a library. We use `%matplotlib inline` to show graphs inline. In our Test file please write/copy the following."
    ]
   },
   {
@@ -129,7 +131,7 @@
    "source": [
     "After typing the above, press SHIFT + RETURN. This will run the code you wrote. If you have written correctly, nothing is going to happen. But if you have misspelled then it will return an error. Please read the last line of error and fix the problem.\n",
     "\n",
-    "We are going to read the CSV file and store the data in a variable called df.\n"
+    "We are going to read the CSV file and store the data in a variable called df. In the next cell please write the following."
    ]
   },
   {
@@ -1424,7 +1426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting with Matplotlib"
+    "# Matplotlib"
    ]
   },
   {
@@ -1501,7 +1503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting with Seaborn"
+    "# Seaborn"
    ]
   },
   {
