--- a/Beginners-Guide-to-the-Chi-square-Goodness-of-Fit-Test.ipynb
+++ b/Beginners-Guide-to-the-Chi-square-Goodness-of-Fit-Test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Beginners Guide to the Chi square Goodness of Fit Test with Jupyter Notebook\n",
+    "# Beginners Guide to the Chi square Goodness of Fit Test\n",
     "\n",
     "## Does the observed fit the expected?"
    ]
