--- a/Gentle-Introduction-to-Chi-square-test-for-independence.ipynb
+++ b/Gentle-Introduction-to-Chi-square-test-for-independence.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gentle Introduction to Chi square test for independence with Jupyter Notebook"
+    "# Gentle Introduction to Chi square test for independence"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "# Prerequisite\n",
     "\n",
-    "Even though this artile is aimed at beginners who has little experience with coding, reading [\"Beginner’s Guide to Jupyter Notebook\n",
+    "Even though this article is aimed at beginners who have little experience with coding, reading  [\"Beginner’s Guide to Jupyter Notebook\n",
     "From\"](http://bit.ly/2S1yHIm) will help you how to get started."
    ]
   },
@@ -56,7 +56,7 @@
    "source": [
     "# SciPy package\n",
     "\n",
-    "In order to find Chi-square, we are going to use [SciPy](https://www.scipy.org/) package. SciPy is a Python-based open-source software for mathematics, science and engineering.  [`scipy.stats.chi2_contingency`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.chi2_contingency.html) is a useful tool for Chi-square test for independence. There is another one called [`scipy.stats.chisquare`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.chisquare.html?highlight=stats%20chisquare#scipy.stats.chisquare) which is used for Chi-square of Goodness of fit test."
+    "In order to find Chi-square, we are going to use the [SciPy](https://www.scipy.org/) package. SciPy is a Python-based open-source software for mathematics, science and engineering.  [`scipy.stats.chi2_contingency`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.chi2_contingency.html) is a useful tool for Chi-square test for independence. There is another one called [`scipy.stats.chisquare`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.chisquare.html?highlight=stats%20chisquare#scipy.stats.chisquare) which is used for Chi-square of Goodness of fit test."
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,14 +97,14 @@
    "source": [
     "When you run codes in Jupyter Notebook, you press SHIFT + RETURN. \n",
     "\n",
-    "We are going to create a sample data. Let’s say we collected data on the favorite color of T-shirts for men and women. We want to find out whether color and gender are independent or not. We create a small sample data using the Pandas dataframe and we will store our data in a variable called `tshirts`. \n",
+    "We are going to create sample data. Let’s say we collected data on the favorite color of T-shirts for men and women. We want to find out whether color and gender are independent or not. We create a small sample data using the Pandas dataframe and we will store our data in a variable called `tshirts`. \n",
     "\n",
-    "Pandas `index` and `columns` is used to name rows and columns. In order to print what's in our `tshirts` variable, we just write `tshirts` at the end and enter SHIFT + RETURN. "
+    "Pandas `index` and `columns` are used to name rows and columns. In order to print what's in our `tshirts` variable, we just write `tshirts` at the end and enter SHIFT + RETURN. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "Female     35     36   42    27"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "Index(['Balck', 'White', 'Red', 'Blue'], dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,12 +206,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly you can use `index` to find out what indexes are."
+    "Similarly, you can use the `index` to find out what indexes are."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "Index(['Male', 'Female'], dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "        [40.06896552, 28.        , 36.20689655, 35.72413793]]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "Female  40.07   28.0  36.21  35.72"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,26 +362,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above table is called a contingency table. You calculate the expected values from the obsered data using the following equation.\n",
+    "The above table is called a contingency table. You calculate the expected values from the observed data using the following equation.\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{expected value} = \\frac{\\text{row total} \\times \\text{column total}}{\\text{grand total}}\n",
     "\\end{equation}\n",
     "\n",
-    "For the first cell,\n",
     "\n",
     "\n",
     "|      | Black  | White | Red | Blue| Total|\n",
     "|------|-------|-------|-----|-----|------|\n",
     "|Male  | $$ \\frac{150 \\times 83}{290}=42.93$$| | | |150 |\n",
     "|Female|       |       |     |      |140 |\n",
-    "|Total | 83    |  58   | 75  |  74  |290 |\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "|Total | 83    |  58   | 75  |  74  |290 |\n"
    ]
   },
   {
@@ -412,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The $\\chi^2$ equation tells us to find the square of difference between the actual value and expected value and divide it by the expected value. Then add all together to find the $\\chi^2$ value. "
+    "The $\\chi^2$ equation tells us to find the square of the difference between the actual value and expected value and divide it by the expected value. Then add all together to find the $\\chi^2$ value. "
    ]
   },
   {
@@ -433,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +435,7 @@
        "11.56978992417547"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,12 +525,13 @@
     "\\text{dof} = \\text{(the number of rows - 1)} \\times \\text{ (the number of columns - 1) }\n",
     "\\end{equation}\n",
     "\n",
-    "For example if your data has 4 rows x 3 columns, then the degree of freedom is:\n",
+    "For example, if your data has 4 rows x 3 columns, then the degree of freedom is:\n",
+    "\n",
     "\\begin{equation}\n",
     "\\text{dof } = (4-1) \\times (3-1)=6\n",
     "\\end{equation}\n",
     "\n",
-    "For $\\chi^2$ Goodness of fit, the categorical data has one dimention. And the degrees of freedom is:\n",
+    "For $\\chi^2$ Goodness of fit, the categorical data has one dimension. And the degrees of freedom is:\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{dof } = (n - 1) \\text{ where n is the number of categories that the variable is divided into.}\n",
